# luci_wheelchair

./: .gitignore  README.md  joyodom_speed1.csv  ws_aliases.sh
center_follow_demo/: CMakeLists.txt  package.xml
center_follow_demo/center_follow_demo/: center_follow_demo.py
launch/: direct_joystick_odom_test.launch.py  joystick_mapping.launch.py  nav.launch.py  nre_bringup.launch.py  odom_encoder.launch.py
luci_encoders/: CMakeLists.txt
src/center_follow_demo/: package.xml
src/center_follow_demo/center_follow_demo/: center_follow_demo.py
src/luci_encoders/: package.xml  setup.cfg  setup.py
src/luci_encoders/luci_encoders/: encoder_node.py
src/nav_nre/: package.xml  setup.cfg  setup.py
src/uwnre_base/: package.xml  setup.cfg  setup.py
src/uwnre_base/launch/: odom_encoder.launch.py
src/uwnre_base/uwnre_base/: joystick_odom_logger.py  odom_node.py  twist2joy_node.py  wheel_angle_scaler.py
src/uwnre_calib/: package.xml  setup.cfg  setup.py
src/uwnre_calib/launch/: direct_joystick_odom_test.launch.py
src/uwnre_calib/uwnre_calib/: direct_joystick_odom_logger.py  joystick_speed_calib.py  test_cmd_vel_pub.py
